# circat

./: .gitignore  Makefile  README.md  circat.cabal  stack.yaml
src/: .ghci
src/Circat/: AbsTy.inc  ApproxEq.hs  Category.hs  Circuit.hs  Classes.hs  Complex.hs  Delay.hs  Doubli.hs  Examples.hs  FFT.hs  If.hs  Incremental.hs  LTree.hs  LinearMap.hs  ListU.hs  Mealy.hs  Misc.hs  Netlist.hs  OldRaggedTree.hs  Pair.hs  Prim.hs  RTree.hs  RaggedTree.hs  Rep.hs  Reversible.hs  Scan.hs  Shift.hs  Show.hs  ShowUtils.hs  State.hs
