Name:               circat
Version:            0.6.3
Cabal-Version:      >= 1.6
Synopsis:           A categorical framework for circuit construction
Category:           circuits, categories
Description: 
  Experiments in circuit construction using a categorical vocabulary
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          (c) 2013-2016 by Tabula Inc and Conal Elliott
Homepage:           http://github.com/conal/circat
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/conal/circat

Library
  hs-source-dirs:   src
  include-dirs:     src
  build-depends:    base<5, ghc-prim, containers, process, directory, newtype, mtl
                  , transformers, constraints
                  , QuickCheck >= 2.7.3
                  , type-unary >= 0.2.19
                  , TypeCompose
                  , ty >= 0.1.5
                  , applicative-numbers
                  , netlist >= 0.3.1, verilog >= 0.2
                  , netlist-to-verilog >= 0.1.2, netlist-to-vhdl >= 0.3.1
                  , treeviz >= 2.0.2

  exposed-modules:     
                    Circat.Misc
                    Circat.Show
                    Circat.Category
                    Circat.Classes
                    Circat.Rep
--                     Circat.ZRep
                    Circat.Pair
                    Circat.RTree
                    Circat.LTree
                    Circat.ApproxEq
                    Circat.RaggedTree
                    Circat.Shift
                    Circat.Mealy
                    Circat.Scan
                    Circat.Complex
                    Circat.FFT
                    Circat.Circuit
                    Circat.Netlist
                    Circat.ShowUtils
                    Circat.Prim
  other-modules:
                    Circat.Examples
  install-includes: Circat/AbsTy.inc


-- TODO: Get Pair from uniform-pair, and move RTree & LTree elsewhere,
-- e.g., type-unary. Wait until I've removed PairCat, VecCat, and
-- TreeCat.
