Name:               circat
Version:            0.6.4
Cabal-Version:      >= 1.18
Synopsis:           A categorical framework for circuit construction
Category:           circuits, categories
Description: 
  Experiments in circuit construction using a categorical vocabulary
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          (c) 2013-2016 by Tabula Inc and Conal Elliott
Homepage:           http://github.com/conal/circat
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/conal/circat

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  include-dirs:     src
  build-depends:    base<5, ghc-prim, containers, process, directory, newtype, mtl
                  , transformers, constraints
                  , QuickCheck >= 2.7.3
                  , type-unary >= 0.3.0
                  , TypeCompose
                  , ty >= 0.1.5
                  , applicative-numbers
                  , netlist >= 0.3.1, verilog >= 0.2
                  , netlist-to-verilog >= 0.1.2, netlist-to-vhdl >= 0.3.1
--                   , treeviz >= 2.0.2

-- TODO: after I remove modules duplicated in shaped-types, trim build-depends

  exposed-modules:     
                    Circat.Misc
                    Circat.Show
                    Circat.Category
                    Circat.Classes
                    Circat.Rep
                    Circat.Complex
                    Circat.Circuit
                    Circat.Netlist
                    Circat.ShowUtils
                    Circat.Mealy

-- Moving the following to shaped-types

--                     Circat.ApproxEq
--                     Circat.Pair
--                     Circat.RTree
--                     Circat.LTree
--                     Circat.RaggedTree
--                     Circat.Shift
--                     Circat.Scan
--                     Circat.FFT

--   other-modules:
--                     Circat.Examples
  install-includes: Circat/AbsTy.inc


-- TODO: Get Pair from uniform-pair, and move RTree & LTree elsewhere,
-- e.g., type-unary. Wait until I've removed PairCat, VecCat, and
-- TreeCat.
